--- a/ExpensesApp/ExpensesApp.iOS/ExpensesApp.iOS.csproj
+++ b/ExpensesApp/ExpensesApp.iOS/ExpensesApp.iOS.csproj
@@ -63,6 +63,8 @@
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CustomRenderers\CustomProgressBarRenderer.cs" />
+    <Compile Include="CustomRenderers\CustomTextCellRenderer.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <None Include="Entitlements.plist" />
