--- a/ExpensesApp/ExpensesApp.iOS/ExpensesApp.iOS.csproj
+++ b/ExpensesApp/ExpensesApp.iOS/ExpensesApp.iOS.csproj
@@ -65,6 +65,7 @@
   <ItemGroup>
     <Compile Include="CustomRenderers\CustomProgressBarRenderer.cs" />
     <Compile Include="CustomRenderers\CustomTextCellRenderer.cs" />
+    <Compile Include="Dependencies\Share.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <None Include="Entitlements.plist" />
